Update html tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/assets/profile.png" />
-    <meta property="og:image" content="https://4lexcorrei4.github.io/assets/profile_compressed.jpg" />
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Tenor+Sans&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Alexandre Correia's Personal Website"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/profile.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -52,6 +47,11 @@
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
     <title>Alexandre Correia</title>
+    <meta property="og:image" content="https://4lexcorrei4.github.io/assets/profile_compressed.jpg" />
+    <meta property="og:url" content="https://4lexcorrei4.github.io" />
+    <meta property="og:description" content="Alexandre Correia's Personal Website" />
+    <meta property="og:type" content="page" />
+    <meta name="description" content="Alexandre Correia's Personal Website"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
