Update share image

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
     <title>Alexandre Correia</title>
-    <meta property="og:image" content="https://4lexcorrei4.github.io/assets/profile_compressed.jpg" />
+    <meta property="og:image" content="https://4lexcorrei4.github.io/assets/share.jpg" />
     <meta property="og:url" content="https://4lexcorrei4.github.io" />
     <meta property="og:description" content="Alexandre Correia's Personal Website" />
     <meta property="og:type" content="page" />
