--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,8 @@
     <!-- End Single Page Apps for GitHub Pages -->
     <title>Alexandre Correia</title>
     <meta property="og:image" content="https://4lexcorrei4.github.io/assets/share.jpg" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://4lexcorrei4.github.io" />
     <meta property="og:description" content="Alexandre Correia's Personal Website" />
     <meta property="og:type" content="page" />
